Fri Sep 16 22:45:49 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_extname): empty string for path name ending with a
	  period.  fixed: [ruby-core:05651]

	* file.c (rb_file_join): smarter behavior at edge cases.
	  fixed: [ruby-core:05706]

	* gc.c (rb_memerror, ruby_xmalloc, ruby_xrealloc, rb_newobj): just
	  abondon if no memoray available, when interpreter is not running.
	  [ruby-dev:27104]

	* gc.c (garbage_collect): return whether GC could run.

	* dir.c (rb_push_glob): fix delimiter bug.  fixed: [ruby-dev:27105]

	* dir.c (dir_s_aref, dir_s_glob): allow multiple patterns.
	  [ruby-dev:27110]

	* win32/win32.c (cmdglob): enable brace expansion.

Fri Sep 16 18:34:01 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/syck/node.c (syck_replace_str): was using return from the
	  void function.  a patch from MIYAMUKO Katsuyuki
	  <miyamuko@mtb.biglobe.ne.jp>.  [ruby-dev:27111]

Fri Sep 16 14:48:48 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: fix typo on MultiTkIp#bg_eval_string

Fri Sep 16 12:02:12 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/syck/rubyext.c (syck_resolver_transfer): remove C++ style
	  comment (//).  [ruby-core:05793]

Fri Sep 16 00:17:03 2005  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/logger/test_logger.rb: unintentionally overwritten changes by
	  Usa.  reverted.

Fri Sep 16 00:03:11 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb (WEBrick::CGI::Socket#initialize): should set
	  $stdout.binmode.

Thu Sep 15 23:25:21 2005  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/{soap,wsdl,xsd}, test/{soap,wsdl,xsd}: imported soap4r/1.5.5.

	  #nnn is a ticket number at http://dev.ctor.org/soap4r

	  * SOAP

	    * allow to configure an envelope namespace of SOAP request. (#124)
	   	TemporaryNamespace = 'http://www.w3.org/2003/05/soap-envelope'
	  	@client.options["soap.envelope.requestnamespace"] =
		  TemporaryNamespace